package hk.edu.polyu.comp.comp3211.monopoly.controller;

public interface IBase {
    /**
     * Prompt , parse and process user commands
     */
    void terminal();
}
