@startuml

title __CONTROLLER's Class Diagram__\n

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.EndGame {
          + terminal()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.Game {
          + Game()
          + terminal()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      interface hk.edu.polyu.comp.comp3211.monopoly.controller.IBase {
          {abstract} + terminal()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.StartMenu {
          + terminal()
      }
    }
  }
  

  hk.edu.polyu.comp.comp3211.monopoly.controller.EndGame .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game o-- hk.edu.polyu.comp.comp3211.monopoly.model.Board : board
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game o-- hk.edu.polyu.comp.comp3211.monopoly.view.Printer : printer
  hk.edu.polyu.comp.comp3211.monopoly.controller.StartMenu .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase


right footer


COMP3211 Software Engineering Course Project: Monopoly, 2021 Fall
by Group 22: MAN Furui, LIU Sicheng, WANG Meng, XING Shiji
endfooter

@enduml
